--- a/src/app/post/test-post-comment/test-post-comment.component.html
+++ b/src/app/post/test-post-comment/test-post-comment.component.html
@@ -38,7 +38,9 @@
 <div>
     <button (click)="get_data()">get data</button>
     <p>data news</p>
-    <div class="post_details">
-        <div [innerHtml]="post_details"></div>
+    <div class="post_details container w-50">
+        <div class="row">
+            <div [innerHtml]="post_details"></div>
+        </div>
     </div>
 </div>
