#4 - rearrage code and add toastr

--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -21,7 +21,7 @@
       <div class="input-group flex-nowrap">
         <span class="input-group-text border-0" id="input-email"><strong>Email</strong></span>
         <input formControlName="email" type="text" class="form-control" placeholder="email" aria-label="email"
-          aria-describedby="addon-wrapping" />
+          aria-describedby="addon-wrapping" readonly/>
       </div>
       <div class="input-group flex-nowrap">
         <span class="input-group-text border-0" id="input-phone"><strong>Điện thoại</strong></span>
