--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@
 
 @import "~mdb-angular-ui-kit/assets/scss/mdb.scss";
 @import "./assets/css/nice-select.css";
-
+@import '~ngx-toastr/toastr';
 * {
   font-family: Arial, Helvetica, sans-serif;
 }
