update article details page

--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -5,7 +5,7 @@
 <div class="container mt-5">
     <h1 class="fw-bold">{{get_title_by_slug(title)}}</h1>
     <div class="hr__line mt-4"></div>
-    <div class="row mt-5">
+    <div class="row mt-5 mb-5">
         <div class="col-md-6">
             <div class="row">
                 <img [src]="posts_list?.[0]?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="w-100"
@@ -44,7 +44,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-3 ">
+        <div class="col-md-3">
             <div class="row">
                 <img [src]="posts_list?.[1]?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="w-100"
                     alt="">
