--- a/src/app/post/post-details/post-details.component.scss
+++ b/src/app/post/post-details/post-details.component.scss
@@ -11,7 +11,7 @@
     width: 100% !important;
   }
   .user__avatar {
-    width: 60px ;
+    width: 60px;
   }
 }
 
@@ -19,3 +19,10 @@
   margin-left: 3rem;
 }
 
+.fs-40 {
+  font-size: 40px;
+}
+
+.w-95{
+  width: 95% !important;
+}
