--- a/src/app/post/search-result/search-result.component.html
+++ b/src/app/post/search-result/search-result.component.html
@@ -59,29 +59,26 @@
     <div class="row result__area mt-4 container" *ngIf="isLoaded && response_list.length > 0">
         <div class="row d-flex justify-content-center">
             <div class="col-md-2 col-sm-12">
-                <img _ngcontent-gid-c168="" mdblazyloading="" alt="404"
-                    ng-reflect-loading-placeholder="../../../assets/images/skeleton-loading.gif"
-                    src="{{response_list?.[0]?.media}}" class="w-100">
+                <img src="{{response_list[0].media}}" class="w-100">
             </div>
             <div class="col-md-5">
                 <div class="row">
-                    <p><a href="{{response_list?.[0]?.link}}">{{response_list?.[0]?.title}}</a></p>
+                    <p class="news-title"><a href="{{response_list[0].link}}">{{response_list[0].title}}</a></p>
                 </div>
                 <div class="row">
-                    <p class="text-break">{{response_list?.[0]?.description}}</p>
+                    <p class="text-break">{{response_list[0].description}}</p>
                 </div>
             </div>
         </div>
         <div class="row d-flex justify-content-center mt-5"
             *ngFor="let item of get_list_with_amount(1,response_list.length)">
             <div class=" col-md-2 col-sm-12">
-                <img _ngcontent-gid-c168="" mdblazyloading="" alt="404"
-                    ng-reflect-loading-placeholder="../../../assets/images/skeleton-loading.gif" src="{{item?.media}}"
-                    class="w-100">
+                <img [attr.data-src]="item?.media" mdbLazyLoading
+                    [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'" class="w-100" alt="">
             </div>
             <div class="col-md-5">
                 <div class="row">
-                    <p><a href="{{item?.link}}">{{item?.title}}</a></p>
+                    <p class="news-title"><a href="{{item?.link}}">{{item?.title}}</a></p>
                 </div>
                 <div class="row">
                     <p class="text-break">{{item.description}}</p>
