--- a/src/app/post/search-result/search-result.component.scss
+++ b/src/app/post/search-result/search-result.component.scss
@@ -34,3 +34,14 @@
   margin: 0 auto;
 }
 
+.news-title {
+  a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 110%;
+  }
+  &:hover {
+    text-decoration: underline;
+  }
+}
