--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -49,7 +49,7 @@
         </div>
         <div class="col-md-3">
             <div class="row">
-                <img [src]="posts_list[1]?.media" alt="'../../../assets/images/skeleton-loading.gif'" class="w-100"
+                <img [src]="posts_list[1].media" alt="'../../../assets/images/skeleton-loading.gif'" class="w-100"
                     alt="">
             </div>
             <div class="row">
