--- a/src/app/post/search-result/search-result.component.html
+++ b/src/app/post/search-result/search-result.component.html
@@ -71,14 +71,16 @@
             </div>
         </div>
         <div class="row d-flex justify-content-center mt-5"
-            *ngFor="let item of get_list_with_amount(1,response_list.length)">
+            *ngFor="let item of get_list_with_amount(1,response_list.length);index as ind">
             <div class=" col-md-2 col-sm-12">
-                <img [attr.data-src]="item?.media" mdbLazyLoading
-                    [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'" class="w-100" alt="">
+                <img [attr.data-src]="item.media" mdbLazyLoading
+                    [loadingPlaceholder]="'../../../assets/images/skeleton-loading.gif'" class="w-100" alt=""
+                    *ngIf="ind > 0">
+                <img src="{{item.media}}" class="w-100" alt="" *ngIf="ind === 0">
             </div>
             <div class="col-md-5">
                 <div class="row">
-                    <p class="news-title"><a href="{{item?.link}}">{{item?.title}}</a></p>
+                    <p class="news-title"><a href="{{item.link}}">{{item.title}}</a></p>
                 </div>
                 <div class="row">
                     <p class="text-break">{{item.description}}</p>
