--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -8,7 +8,7 @@
     <div><strong>{{currentUser.name}}</strong></div>
     <div class="link-group">
       <div><a href="/change-password">Thay đổi mật khẩu</a></div>
-      <div><a href="#">Tin đã lưu</a></div>
+      <div><a href="/saved-post">Tin đã lưu</a></div>
       <div><a href="#">Tin đã đọc</a></div>
       <div><a (click)="openPopconfirm($event)" class="red">Xóa tài khoản</a></div>
     </div>
