--- a/src/app/shared/navbar/navbar.component.css
+++ b/src/app/shared/navbar/navbar.component.css
@@ -44,7 +44,7 @@
 
 .button__search {
   position: relative;
-  right: 30px;
+  right: 5%;
   height: 100%;
 }
 .button__search i {
@@ -157,6 +157,11 @@
 @media only screen and (min-width: 768px) {
   .app__logo {
     margin-left: 30px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .button__search {
+    right: 0;
   }
 }
 
