--- a/src/app/auth/register/non-activated-account/non-activated-account.component.html
+++ b/src/app/auth/register/non-activated-account/non-activated-account.component.html
@@ -2,7 +2,7 @@
 <div class="container d-flex justify-content-center mt-5">
   <div class="non-active-component">
     <img src="assets/images/red-cross.png">
-    <p>Tại khoản của bạn chưa được kích hoạt!</p>
+    <p>Tài khoản của bạn chưa được kích hoạt!</p>
     <p>Xin vui lòng kích hoạt tài khoản để có thể sử dụng!!</p>
     <a href="" (click)="resendKey()">Gửi lại email kích hoạt!</a>
     <a href="/signin">Quay lại đăng nhập!</a>
