--- a/src/app/profile/saved-post/saved-post.component.html
+++ b/src/app/profile/saved-post/saved-post.component.html
@@ -11,12 +11,12 @@
   <div class="right-panel w-50 ">
     <p class="saved-post-title">Tin đã lưu</p>
     <div class="button-group">
-      <button type="button" class="btn btn-light">xóa</button>
-      <button type="button" class="btn btn-light">chọn tất cả</button>
+      <button (click)="delete_saved_posts()" type="button" class="btn btn-light">xóa</button>
+      <button (click)="choose_all()" type="button" class="btn btn-light">chọn tất cả</button>
     </div>
     <ul class="list-group list-group-light">
       <li *ngFor="let item of items" class="list-group-item">
-        <input mdbCheckbox class="form-check-input me-1" type="checkbox" value="" aria-label="..."/>
+        <input mdbCheckbox class="form-check-input me-1" type="checkbox" value="" id="{{item.id}}"/>
         <a href="/bai-viet/{{item.link_post}}">{{item.title}}</a>
       </li>
     </ul>
