--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -9,7 +9,7 @@
     <div class="link-group">
       <div><a href="/change-password">Thay đổi mật khẩu</a></div>
       <div><a href="/saved-post">Tin đã lưu</a></div>
-      <div><a href="#">Tin đã đọc</a></div>
+      <div><a href="/read-posts">Tin đã đọc</a></div>
       <div><a (click)="openPopconfirm($event)" class="red">Xóa tài khoản</a></div>
     </div>
   </div>
