--- a/src/app/profile/read-posts/read-posts.component.html
+++ b/src/app/profile/read-posts/read-posts.component.html
@@ -23,7 +23,7 @@
                     <a href="{{item.link}}" class="news-title">{{item.title}}</a>
                 </div>
                 <div class="col-md-1">
-                    <i class="fas fa-trash text-danger delete__action"></i>
+                    <i class="fas fa-trash text-danger delete__action" (click)="delete_read_post(item.link)"></i>
                 </div>
             </div>
         </div>
