--- a/src/app/profile/profile/profile.component.html
+++ b/src/app/profile/profile/profile.component.html
@@ -7,6 +7,7 @@
     </div>
     <div><strong>{{currentUser.name}}</strong></div>
     <div class="link-group">
+      <div><a href="/profile">Thông tin tài khoản</a></div>
       <div><a href="/change-password">Thay đổi mật khẩu</a></div>
       <div><a href="/saved-post">Tin đã lưu</a></div>
       <div><a href="/read-posts">Tin đã đọc</a></div>
@@ -21,7 +22,7 @@
       <div class="input-group flex-nowrap">
         <span class="input-group-text border-0" id="input-email"><strong>Email</strong></span>
         <input formControlName="email" type="text" class="form-control" placeholder="email" aria-label="email"
-          aria-describedby="addon-wrapping" readonly/>
+          aria-describedby="addon-wrapping" readonly />
       </div>
       <div class="input-group flex-nowrap">
         <span class="input-group-text border-0" id="input-phone"><strong>Điện thoại</strong></span>
