--- a/src/app/profile/read-posts/read-posts.component.html
+++ b/src/app/profile/read-posts/read-posts.component.html
@@ -7,9 +7,10 @@
         </div>
         <div><strong>{{currentUser.name}}</strong></div>
         <div class="link-group">
+            <div><a href="/profile">Thông tin tài khoản</a></div>
             <div><a href="/change-password">Thay đổi mật khẩu</a></div>
-            <div><a href="/read-posts">Tin đã lưu</a></div>
-            <div><a href="#">Tin đã đọc</a></div>
+            <div><a href="/saved-post">Tin đã lưu</a></div>
+            <div><a href="/read-posts">Tin đã đọc</a></div>
             <div><a (click)="openPopconfirm($event)" class="red">Xóa tài khoản</a></div>
         </div>
     </div>
